--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "homepage": "https://horizon-ui.com/fire-dashboard",
-  "name": "fire-dashboard",
+  "homepage": "https://horizon-ui.com/credit-rating",
+  "name": "credit-rating",
   "version": "1.0.1",
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^1.1.5",
-    "@chakra-ui/react": "1.8.8",
+    "@chakra-ui/react": "^1.8.8",
     "@chakra-ui/system": "^1.12.1",
     "@chakra-ui/theme-tools": "^1.3.6",
     "@emotion/cache": "^11.7.1",
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@hypertheme-editor/chakra-ui": "^0.1.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -21,11 +21,13 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
+    "chart.js": "^4.4.3",
     "formik": "^2.4.5",
     "framer-motion": "^4.1.17",
     "react": "17.0.2",
     "react-apexcharts": "1.4.0",
     "react-calendar": "^3.7.0",
+    "react-chartjs-2": "^5.2.0",
     "react-custom-scrollbars-2": "^4.2.1",
     "react-dom": "17.0.2",
     "react-dropzone": "^12.0.4",
