--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-icons": "^4.3.1",
     "react-is": "^18.0.0",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "2.0.2",
@@ -71,7 +71,6 @@
     ]
   },
   "devDependencies": {
-    "eslint-config-react-app": "^7.0.1",
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^3.2.3"
   }
 }
