--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.24.6",
     "gh-pages": "^3.2.3"
   }
