GitHub page deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://horizon-ui.com/credit-rating",
+  "homepage": "https://nhatquang510.github.io/dashboard",
   "name": "credit-rating",
   "version": "1.0.1",
   "private": true,
